gcc/testsuite/rust/rustc/ui/parser/doc-comment-in-if-statement.rs
fn main() {
    if true /*!*/ {}
// { dg-error ".E0753." "" { target *-*-* } .-1 }
// { dg-error ".E0753." "" { target *-*-* } .-2 }
}

